--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,20 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Node modules
+node_modules/
+client/node_modules/
+server/node_modules/
+
+# Build output
+client/dist/
+client/dist-ssr/
+dist/
+dist-ssr/
 *.local
+
+# Env files
+server/.env
 
 # Editor directories and files
 .vscode/*
